I think the prompts are ready and should work. They are producing consistent results. They are located somewhere in the research.txt file.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #eee;
+  --foreground: #00ff37;
   height: 100%;
   width: 100%;
 }
@@ -12,7 +12,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #00ff37;
   }
 }
 
@@ -24,47 +24,22 @@ body {
 }
 
 .terminal{
-  background:var(--background);
-  color: #00ff37;
+  background:#000000a0;
+  color: var(--foreground);
   position: absolute;
   height: 75vh;
-  width: 50vw;
+  width: 75vw;
   top: 50%;
   left: 50%;
-  box-shadow: 0px 0px 5px #ffffff52;
+  box-shadow: 0px 0px 10px #a4a4a4;
   border-radius: 2vh;
   border : 1px solid #000;
   transform: translate(-50%, -50%);
   overflow-y: scroll;
   padding: 2%;
-  
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 1px;
-}
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: #888;
-  height: 90%;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #f1f1f1;
-
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #ffffff;
-}
-
-.input-line{
-  /* display: flex; */
-}
 .input-line-prompt{
   width: fit-content;
 }
