--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #eee;
   --foreground: #00ff37;
+  ;
   height: 100%;
   width: 100%;
 }
@@ -16,11 +17,15 @@
   }
 }
 
+*{
+  text-shadow: 0px 2px 1px #ff00d9;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
   overflow: hidden;
-  font-size: 3vh;
+  font-size: 2.75vh;
 }
 
 .terminal{
@@ -47,9 +52,34 @@ body {
 .input{
   background: none;
   display: inline;
-  /* width: 100%; */
+  width: 80%;
 }
 
 .input:focus{
   outline: none;
 }
+
+.line{
+  word-wrap: break-word;
+}
+
+.green{
+  color: #00ff37;
+}
+
+.red{
+  color: red;
+}
+
+.yellow{
+  color: yellow;
+}
+
+.white{
+  color: white;
+}
+
+.blue{
+  color: #00bfff;
+}
+
