--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,15 +17,11 @@
   }
 }
 
-*{
-  text-shadow: 0px 2px 1px #ff00d9;
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
   overflow: hidden;
-  font-size: 2.75vh;
+  font-size: 2.85vh;
 }
 
 .backdrop{
@@ -112,7 +108,7 @@ body {
 }
 
 .red{
-  color: red;
+  color: rgba(231, 0, 0);
 }
 
 .yellow{
@@ -124,6 +120,6 @@ body {
 }
 
 .blue{
-  color: #00bfff;
+  color: #00c8ff;
 }
 
