--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,17 +69,14 @@ body {
 }
 
 .terminal{
-  background:#000000b9;
+  /* background:#000000b9; */
   backdrop-filter: blur(2px);
   color: var(--foreground);
   position: absolute;
-  height: 75vh;
-  width: 75vw;
+  height: 80vh;
+  width: 85vw;
   top: 50%;
   left: 50%;
-  box-shadow: 0px 0px 10px #a4a4a4;
-  border-radius: 2vh;
-  border : 1px solid #000;
   transform: translate(-50%, -50%);
   overflow-y: scroll;
   padding: 2%;
